sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:19: error: type mismatch;
 found   : Boolean
 required: Int
	while(debut !== fin)
                    ^